--- a/app/src/main/res/layout/footer.xml
+++ b/app/src/main/res/layout/footer.xml
@@ -2,4 +2,4 @@
 <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="40dp" />
+    android:layout_margin="@dimen/size_in_fourteen" />
